# code_chat_bot

./: .gitignore  FEATURES.md  MODERNIZATION.md  README.md  document_loader.py  document_loader_original.py  main.py  main_enhanced.py  main_original.py  pyproject.toml  requirements.txt  total_cost.txt
.github/: copilot-instructions.md
src/code_chat_bot/: __init__.py
src/code_chat_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/code_chat_bot/agents/: __init__.py
src/code_chat_bot/config/: __init__.py
src/code_chat_bot/database/: __init__.py
src/code_chat_bot/document_processing/: __init__.py
src/code_chat_bot/i18n/: __init__.py
src/code_chat_bot/models/: __init__.py
src/code_chat_bot/monitoring/: __init__.py
src/code_chat_bot/nlp_analysis/: __init__.py
src/code_chat_bot/providers/: __init__.py
src/code_chat_bot/voice/: __init__.py
